--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,11 @@ button {
 }
 
 h1 {
-  margin:  0;
+  margin: 0;
   padding: 0.5em;
+  background-color: #483d8b;
+  color: #fff;
+  text-shadow: 1px 1px 6px #000;
 }
 
 /*------------------------------------*\
@@ -54,16 +57,16 @@ h1 {
   margin: 0.6em 1em;
 }
 
-.toolbar__btn-text-align-right {
-  background-image: url("../assets/icons/paragraph-right.svg");
+.toolbar__btn-text-align-left {
+  background-image: url("../assets/icons/paragraph-left.svg");
 }
 
 .toolbar__btn-text-align-center {
   background-image: url("../assets/icons/paragraph-center.svg");
 }
 
-.toolbar__btn-text-align-left {
-  background-image: url("../assets/icons/paragraph-left.svg");
+.toolbar__btn-text-align-right {
+  background-image: url("../assets/icons/paragraph-right.svg");
 }
 
 .toolbar__btn-text-align-justify {
