The "edit" buttons will only be pressed for 150 ms

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,6 +189,10 @@ h1 {
   background-image: url("../assets/icons/list-unordered.svg");
 }
 
+.pressed {
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+
 /*------------------------------------*\
   #TEXT-BOX
 \*------------------------------------*/
